# input_be

./: CMakeLists.txt  README.md  doxygen.cfg
src/: InputBackend.cpp  InputBackend.hpp  Test.cpp
src/input/: Device.cpp  Device.hpp  Exception.hpp
